# MMSkills_for_Visual_Agents

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: skill_submission.yml
agent_integrations/mmskills/: SKILL.md
agent_integrations/mmskills-agent-adapter/: SKILL.md
agent_integrations/mmskills-agent-adapter/references/: integration_targets.md  library_index.json
agent_integrations/mmskills/agents/: openai.yaml
agent_integrations/mmskills/references/: integration_targets.md
docs/: submit_mmskills.md
gaming_agent_integration/: README.md
gaming_agent_integration/patches/: register_skills_agent.patch
macosworld_integration/: README.md
macosworld_integration/agent/: openai_text_skill.py
mm_agents/: general_agent.py  mm_skill_agent.py
mm_agents/_mmskills_internal/: __init__.py  _mm_skill_adapter_base.py  _mm_skill_long_plan.py  _mm_skill_planner.py  _mm_skill_state_cards.py
osworld_integration/: README.md  run.py  run.sh
scripts/: install_codex_mmskills.sh  install_into_osworld.py  sync_from_sources.py
skill_generator/: __main__.py  auditor.py  config.yaml  dataloader.py  image_grounder.py  models.py  skill_drafter.py  skill_merger.py  skill_planner.py  task_cluster.py  util.py
task_skill_mappings/: README.md  task_skill_mapping.json
vab_minecraft_integration/: README.md  gemini-minecraft-mmskills.yaml  gemini_minecraft_skills_agent.py  minecraft_gemini_mmskills_assignment.yaml  minecraft_mmskills_assignment.yaml  minecraft_skill_loader.py  mmskills_http_agent.py  openai-chat-mmskills.yaml
(+4 files in other folders)
